--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     //  ModelView
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+
+    //  LiveData
+    implementation 'androidx.compose.runtime:runtime-livedata:1.3.3'
 }
